fixed image resizing, shouldnt see clipping anymore. pushed some pixels around. next up is playing around with new fonts/textures, maybe speeding up transitions even more, and adding some more visual content to the shows and the music.

--- a/stripes.css
+++ b/stripes.css
@@ -17,7 +17,7 @@ main {
 
 img {
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 iframe, object, embed {
@@ -233,8 +233,8 @@ section.stripes-curtain{
 }
 
 .picture{
-  height: 40%;
-  width: 22%;
+  height: 45%;
+  width: 23%;
   display: inline-block;
   float: left;
   position: relative;
